custom ship AI changelog